--- a/public/home.html
+++ b/public/home.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>this is home.html</h1>
+    <h1>this is home.html publish to release v1.0.1</h1>
   </body>
 </html>
